# CLEAR

./: .gitignore  Dockerfile  README.md  merge_results.py  pyproject.toml  requirements.txt  run_benchmarks.bat  run_benchmarks.py  run_tests.bat  test_docker.py  test_workspace.py
docker/: dockerfile
docs/: benchmark_spec.md  cli_reference.md  contributing.md  failure_taxonomy.md  index.md  metrics.md  models.md  reproducibility.md  results_schema.md  troubleshooting.md
scripts/: regenerate_graphs.py
src/: main.py
src/agent/: __init__.py  candidate.py  logic.py  model_adapter.py  model_profiles.py  prompts.py  routing.py  state.py
src/benchmarking/: __init__.py  cli.py  constants.py  difficulty.py  discovery.py  execution.py  failures.py  merge_results.py  metrics.py  models.py  runner.py  validation.py
src/core/: sandbox.py
src/repair/: __init__.py  cli.py  execution.py  paths.py  presentation.py  protocol.py  runtime.py
src/reporting/: __init__.py  artifacts.py  exporter.py  graphs.py  markdown.py  tables.py
src/tools/: agent_tools.py  repair_tools.py
src/utils/: config.py  diff.py  parsers.py  pull_models.py  result_export.py  terminal.py
tests/: validate_benchmarks.py
tests/analysis/: analyse_results.py
tests/benchmarks/algorithm/bfs/: target.py  test_algorithm.py
tests/benchmarks/exception/: target.py  test_exception.py
tests/benchmarks/logic/: target.py  test_logic.py
tests/benchmarks/syntax/: target.py  test_syntax.py
workspace/: math_ops.py  string_ops.py  test_integration.py  test_intergration.py  test_math_ops.py
(+171 files in other folders)
