[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clear-repair"
version = "0.1.0"
description = "CLEAR: Closed-Loop Engine for Autonomous Code Repair"
authors = [
    {name = "Rohan Burman"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.1.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "colorama>=0.4.6",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0"
]

keywords = [
    "llm",
    "program-repair",
    "code-repair",
    "benchmarking",
    "ai"
]

[project.scripts]
clear-repair = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]